# refactoring-service

./: Dockerfile  Makefile  Readme.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  service.txt
.github/workflows/: test.yml
src/refactoring_service/: main.py  schemas.py
src/refactoring_service/db/: db.py
src/refactoring_service/routes/: books_api.py  date_api.py  email_api.py  math_api.py  string_api.py  users_api.py
src/refactoring_service/services/: book_service.py  date_service.py  email_service.py  math_service.py  string_service.py  user_service.py
src/refactoring_service/storages/: data_repositories.py
tests/: api_test.py
